[package]
name = "dune"
version = "0.9.3"
authors = ["Alex Alikiotis <alexalikiotis5@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/aalykiot/dune"
description = "A hobby runtime for JavaScript and TypeScript 🚀"

[[bin]]
name = "dune"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.dune_event_loop]
git = "https://github.com/aalykiot/dune-event-loop"
branch = "main"

[dependencies]
v8 = { version = "136.0.0", default-features = false }
clap = { version = "4.5.24", features = ["derive"] }
anyhow = "1.0.95"
colored = "3.0.0"
rustyline = "15.0.0"
rustyline-derive = "0.11.0"
lazy_static = "1.5.0"
sha = "1.0.3"
regex = "1.11.1"
dirs = "6.0.0"
path-absolutize = "3.1.1"
ureq = { version = "3.0.11", features = ["charset"] }
phf = { version = "0.11.3", features = ["macros"] }
url = "2.5.4"
clearscreen = "4.0.1"
bincode = "1.3.3"
swc_common = { version = "8.1.0", features = ["tty-emitter", "sourcemap"] }
swc_ecma_codegen = "10.0.0"
swc_ecma_parser = "11.1.2"
swc_ecma_transforms_base = "12.2.0"
swc_ecma_transforms_typescript = "13.0.0"
swc_ecma_transforms_react = "13.0.1"
swc_bundler = "15.0.0"
swc_ecma_ast = "8.1.2"
swc_ecma_loader = "8.0.0"
swc_atoms = "5.0.0"
swc_ecma_transforms = "15.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dns-lookup = "2.0.4"
tempdir = "0.3.7"
zstd = "0.13.3"
notify = "8.0.0"
httparse = "1.10.1"
pest = "2.8.0"
pest_derive = "2.8.0"
futures = "0.3.31"
tokio = { version = "1.42.1", features = ["full"] }
axum = { version = "0.8.3", features = ["ws"] }
uuid = { version = "1.16.0", features = ["v4", "fast-rng"] }
base64 = "0.22.1"
indicatif = "0.17.11"
rusqlite = { version = "0.34.0", features = ["bundled", "load_extension"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["signal"] }

[target.'cfg(windows)'.dependencies]
enable-ansi-support = "0.2.1"

[dev-dependencies]
assert_fs = "1.1.2"
