[package]
name = "dune"
version = "0.11.2"
authors = ["Alex Alikiotis <alexalikiotis5@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/aalykiot/dune"
description = "A hobby runtime for JavaScript and TypeScript 🚀"

[[bin]]
name = "dune"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.dune_event_loop]
git = "https://github.com/aalykiot/dune-event-loop"
branch = "main"

[dependencies]
v8 = { version = "142.2.0", default-features = false }
clap = { version = "4.5.53", features = ["derive"] }
anyhow = "1.0.100"
colored = "3.0.0"
rustyline = "17.0.2"
rustyline-derive = "0.11.1"
lazy_static = "1.5.0"
sha = "1.0.3"
regex = "1.12.2"
dirs = "6.0.0"
path-absolutize = "3.1.1"
ureq = { version = "3.1.4", features = ["charset"] }
phf = { version = "0.13.1", features = ["macros"] }
url = "2.5.7"
clearscreen = "4.0.2"
swc_common = { version = "18.0.1", features = ["tty-emitter", "sourcemap"] }
swc_ecma_codegen = "21.0.0"
swc_ecma_parser = "29.0.2"
swc_ecma_transforms_base = "32.0.0"
swc_ecma_transforms_typescript = "35.0.0"
swc_ecma_transforms_react = "35.0.0"
swc_bundler = "37.0.0"
swc_ecma_ast = "19.0.0"
swc_ecma_loader = "18.0.0"
swc_atoms = "9.0.0"
swc_ecma_transforms = "41.0.0"
swc_ecma_visit = "19.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
dns-lookup = "3.0.1"
tempdir = "0.3.7"
zstd = "0.13.3"
notify = "8.2.0"
httparse = "1.10.1"
pest = "2.8.4"
pest_derive = "2.8.4"
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }
axum = { version = "0.8.7", features = ["ws"] }
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }
base64 = "0.22.1"
indicatif = "0.18.3"
rusqlite = { version = "0.37.0", features = ["bundled", "load_extension", "column_decltype", "column_metadata"] }
postcard = { version = "1.1.3", features = ["use-std"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["signal"] }

[target.'cfg(windows)'.dependencies]
enable-ansi-support = "0.3.1"

[dev-dependencies]
assert_fs = "1.1.3"
